--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="AngularApp" lang="en">
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>TactShoppingcart</title>
-    <base href="/">
+    <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
 
-<body>
+  <body>
     <app-root></app-root>
-</body>
-
+  </body>
 </html>
