--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html class="AngularApp" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>TactShoppingcart</title>
+    <title>ShopAtBookAttic</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
